# ros2-perf-multihost-v2

./: .gitignore  README.md
config/: DEFAULT_RMW_ZENOH_ROUTER_CONFIG.json5  DEFAULT_RMW_ZENOH_SESSION_CONFIG.json5  multihost_config.json5
docker_base/: Dockerfile
examples/multihost_example/: multihost_example.json  multihost_example_raw.json
examples/rpi_example/: five_hosts.json  four_hosts.json  multihost_example.json  one_host.json  simple_example.json  three_hosts.json  triple_example.json  triple_hosts_ver2.json  two_hosts.json
intermediate_node/src/: intermediate_node.cpp
manager_scripts/: copy_logs.sh  manager_scripts.py  start_docker_scripts.py  start_scripts.py  start_servers.sh  start_servers_all.sh  start_zenoh_router.sh
node_options/include/node_options/: cli_options.hpp
node_options/src/: cli_options.cpp
node_options_intermediate/include/node_options_intermediate/: cli_options.hpp
node_options_intermediate/src/: cli_options.cpp
parse_json/: copy_files_to_rpis.sh  distribute_docker_images.sh  generate_dockerfiles.py  generate_scripts.py
parse_json_to_dockerfiles/: parse_json.py
parse_json_to_dockerfiles/performance_test/logs/inter1_log/: amazon_pub_log.txt  inazuma_pub_log.txt  inazuma_sub_log.txt  metadata.txt
performance_test/: all_latency.py  monitor_docker.py  monitor_host.py  monitor_proc.py  performance_test.py  throughput_calc.py
publisher_node/: package.xml
publisher_node/msg/: PerformanceHeader.msg
publisher_node/src/: publisher_node.cpp
subscriber_node/: package.xml
subscriber_node/src/: subscriber_node.cpp
(+6 files in other folders)
