<package format="3">
  <name>publisher_node</name>
  <version>0.0.0</version>
  <description>Custom Publisher Node</description>

  <maintainer email="user@example.com">Yugo Tanaka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <depend>node_options</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
