<package format="2">
  <name>subscriber_node</name>
  <version>0.0.0</version>
  <description>Custom Subscriber Node</description>

  <maintainer email="user@example.com">Yugo Tanaka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <depend>node_options</depend>
  <depend>publisher_node</depend>
  <depend>rosidl_default_runtime</depend>


</package>